[gd_scene load_steps=13 format=3 uid="uid://n3vk024qc6mm"]

[ext_resource type="PackedScene" uid="uid://b0xv0xomuk2c6" path="res://src/unit/character/npc/npc.tscn" id="1_lkjk7"]
[ext_resource type="Script" uid="uid://bho1svyypb77o" path="res://src/unit/character/npc/ham_npc.gd" id="2_fppqe"]
[ext_resource type="Shader" uid="uid://d003qi8qm71iu" path="res://src/asset/shader/hurt_flash.gdshader" id="2_ix1dw"]
[ext_resource type="Texture2D" uid="uid://b66tssygjnrwd" path="res://asset/texture/unit/npc/ham.webp" id="3_ix1dw"]
[ext_resource type="Texture2D" uid="uid://cak26mkhlk3va" path="res://asset/texture/unit/npc/ham_throw.webp" id="5_rb1i8"]
[ext_resource type="PackedScene" uid="uid://vpfo1b81nema" path="res://src/ui/dialog/dialog_content.tscn" id="6_rb1i8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kybmb"]
resource_local_to_scene = true
shader = ExtResource("2_ix1dw")
shader_parameter/flash_amount = 0.0
shader_parameter/flash_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_kybmb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ix1dw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ix1dw"]
resource_name = "idle"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ix1dw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rb1i8"]
resource_name = "ready"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ix1dw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_fppqe"]
resource_name = "throw"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_rb1i8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphics/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kybmb"]
_data = {
&"RESET": SubResource("Animation_kybmb"),
&"idle": SubResource("Animation_ix1dw"),
&"ready": SubResource("Animation_rb1i8"),
&"throw": SubResource("Animation_fppqe")
}

[node name="HamNpc" instance=ExtResource("1_lkjk7")]
script = ExtResource("2_fppqe")
animation_name = &"idle"

[node name="ThrowPoint" type="Marker2D" parent="Graphics" index="0"]
position = Vector2(8, -16)
rotation = 3.1415927
scale = Vector2(1, -1)

[node name="Sprite2D" parent="Graphics" index="1"]
material = SubResource("ShaderMaterial_kybmb")
position = Vector2(0, -16)
texture = ExtResource("3_ix1dw")
hframes = 4

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2(0, -4)

[node name="AnimationPlayer" parent="." index="3"]
libraries = {
&"": SubResource("AnimationLibrary_kybmb")
}

[node name="Dialog" parent="." index="4" node_paths=PackedStringArray("root_dialog")]
position = Vector2(0, -34)
root_dialog = NodePath("Start")

[node name="Start" parent="Dialog" index="3" node_paths=PackedStringArray("target") instance=ExtResource("6_rb1i8")]
can_release_control = false
message = Array[String](["HAM_START_0", "HAM_START_1"])
target = {
"0_HAM_THROW": NodePath("../Throw"),
"1_HAM_BATTLE": NodePath("../Battle")
}

[node name="Throw" parent="Dialog" index="4" instance=ExtResource("6_rb1i8")]
can_end = true
can_release_control = false
message = Array[String](["HAM_THROW_0", "HAM_THROW_1"])

[node name="ThrowBattle" parent="Dialog" index="5" node_paths=PackedStringArray("target") instance=ExtResource("6_rb1i8")]
can_release_control = false
message = Array[String](["HAM_THROW_BATTLE_0", "HAM_THROW_BATTLE_1", "HAM_THROW_BATTLE_2"])
target = {
"1_HAM_BATTLE": NodePath("../Battle")
}

[node name="Battle" parent="Dialog" index="6" instance=ExtResource("6_rb1i8")]
can_end = true
can_release_control = false
message = Array[String](["HAM_BATTLE_0"])

[connection signal="ended" from="Dialog/Throw" to="." method="_on_throw_ended"]
[connection signal="ended" from="Dialog/Battle" to="." method="_on_battle_ended"]
